--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -12,7 +12,7 @@ block body
 	section.home_header
 		.container
 			h1 ĐỊNH HƯỚNG PHÁT TRIỂN
-			ul.nav
+			ul.nav.nav-tabs.justify-content-center
 				li.nav-item
 					a.nav-link(href="#") TẤT CẢ
 				li.nav-item
@@ -21,3 +21,16 @@ block body
 					a.nav-link(href="#") TIN THỊ TRƯỜNG
 				li.nav-item
 					a.nav-link(href="#") TIN VỊT
+			.row
+				.col-md-4
+					figure
+						.img-fluid
+							img(src="./")
+				.col-md-4
+					figure
+						.img-fluid
+							img(src="./")
+				.col-md-4
+					figure
+						.img-fluid
+							img(src="./")
