--- a/src/styles/_pages/index.sass
+++ b/src/styles/_pages/index.sass
@@ -12,6 +12,7 @@
 			display: flex
 			font-size: 30
 			letter-spacing: 0.04rem
+			bottom: 1.5rem
 			&:before
 				content: ""
 				display: block
@@ -37,9 +38,14 @@
 				border: 3px #00c4c9 solid
 				transform: translateX(-10%) translateY(20%)
 	ul
-		justify-content: center
 		li
 			a
 				color: black
 				font-family: Helvetica Bold
 				font-size: 14
+				&:hover,
+				&:active
+					color: #ffffff
+					-webkit-border-radius: 50px 50px
+					background-color: #00c4c9
+
