--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -14,7 +14,7 @@ block body
 			h1 ĐỊNH HƯỚNG PHÁT TRIỂN
 			ul.nav.nav-tabs.justify-content-center
 				li.nav-item
-					a.nav-link(href="#") TẤT CẢ
+					a.nav-link(href="javascript:void(0)") TẤT CẢ
 				li.nav-item
 					a.nav-link(href="#") GROUP
 				li.nav-item
